--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "web": "expo start --web --no-dev --host localhost --port 3000"
   },
   "overrides": {
-    "json5": ">2.2.2"
+    "json5": ">2.2.2",
+    "optionator": ">0.9.1",
+    "semver": ">=7.5.2",
+    "xml2js": ">0.5.0"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
